--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,39 +8,33 @@
     "start": "next start"
   },
   "dependencies": {
-    "radix-ui": "^1.4.2",
-    "@tanstack/react-form": "^1.12.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.487.0",
-    "next": "15.5.4",
-    "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.4",
-    "zod": "catalog:",
-    "@trpc/tanstack-react-query": "^11.5.0",
+    "@ai-sdk/react": "^2.0.39",
+    "@parametric-ai/api": "workspace:*",
+    "@parametric-ai/auth": "workspace:*",
+    "@parametric-ai/ui": "workspace:*",
+    "@prisma/client": "catalog:",
+    "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
-    "@tanstack/react-query": "^5.85.5",
-    "@prisma/client": "catalog:",
+    "@trpc/tanstack-react-query": "catalog:",
     "ai": "catalog:",
-    "@ai-sdk/react": "^2.0.39",
-    "streamdown": "^1.3.0",
-    "shiki": "^3.12.2",
     "better-auth": "catalog:",
-    "@parametric-ai/api": "workspace:*",
-    "@parametric-ai/auth": "workspace:*"
+    "next": "15.5.4",
+    "next-themes": "^0.4.6",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "shiki": "^3.12.2",
+    "sonner": "catalog:",
+    "streamdown": "^1.3.0",
+    "zod": "catalog:"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/postcss": "catalog:",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@types/node": "catalog:",
-    "@types/react": "~19.1.10",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4.1.10",
-    "typescript": "catalog:",
-    "@tanstack/react-query-devtools": "^5.85.5"
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   }
 }
