--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,6 +28,7 @@
     "@ai-sdk/google": "catalog:",
     "dotenv": "catalog:",
     "zod": "catalog:",
+    "better-auth": "catalog:",
     "@parametric-ai/auth": "workspace:*",
     "@parametric-ai/db": "workspace:*"
   }
