--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,15 +1,43 @@
 packages:
   - apps/*
   - packages/*
+
 catalog:
-  "@trpc/server": ^11.5.0
-  better-auth: ^1.3.13
+  '@ai-sdk/google': ^2.0.13
+  '@hookform/resolvers': ^5.2.2
+  '@prisma/client': ^6.15.0
+  '@radix-ui/react-label': ^2.1.7
+  '@radix-ui/react-slot': 1.2.3
+  '@tailwindcss/postcss': ^4.1.10
+  '@tanstack/react-query': ^5.85.5
+  '@trpc/client': ^11.5.0
+  '@trpc/server': ^11.5.0
+  '@trpc/tanstack-react-query': ^11.5.0
+  '@types/node': ^22.13.11
+  '@types/react': ~19.2.2
+  '@types/react-dom': ^19
   ai: ^5.0.49
-  "@ai-sdk/google": ^2.0.13
+  better-auth: ^1.3.13
+  class-variance-authority: ^0.7.1
+  clsx: ^2.1.1
   dotenv: ^17.2.2
-  zod: ^4.1.11
-  typescript: ^5.8.2
-  "@types/node": ^22.13.11
+  lucide-react: ^0.475.0
+  next-themes: ^0.4.6
+  react: 19.1.0
+  react-dom: 19.1.0
+  react-hook-form: ^7.65.0
+  sonner: ^2.0.5
+  tailwind-merge: ^3.3.1
+  tailwindcss: ^4.1.10
   tsdown: ^0.15.5
-  "@trpc/client": ^11.5.0
-  "@prisma/client": ^6.15.0
+  tw-animate-css: ^1.3.6
+  typescript: ^5.8.2
+  zod: ^4.1.11
+
+onlyBuiltDependencies:
+  - '@prisma/client'
+  - '@prisma/engines'
+  - '@tailwindcss/oxide'
+  - esbuild
+  - prisma
+  - sharp
