chore: update package.json and pnpm-lock.yaml to use catalog for devDependencies

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,13 +14,13 @@
     "tw-animate-css": "catalog:"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/postcss": "catalog:",
     "@turbo/gen": "^2.5.5",
-    "@types/node": "^20.19.9",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.2"
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   },
   "exports": {
     "./globals.css": "./src/styles/globals.css",
