feat(ui): add new form components including Field, InputGroup, and Textarea
- Introduced Field component with subcomponents: FieldSet, FieldLegend, FieldGroup, FieldContent, FieldLabel, FieldTitle, FieldDescription, FieldSeparator, and FieldError for enhanced form structure and validation.
- Created InputGroup component to manage input fields with addons and buttons.
- Added Input and Textarea components for standardized input handling.
- Implemented Label and Separator components for better accessibility and layout.
- Integrated Sonner for notifications with customizable icons and themes.
- Established utility functions for sending verification and reset password emails using Resend API.
- Configured TypeScript settings and build scripts for the utils package.
- Updated pnpm workspace and lockfile to include new dependencies and ensure compatibility.

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -24,6 +24,7 @@
     "better-auth": "catalog:",
     "dotenv": "catalog:",
     "zod": "catalog:",
-    "@parametric-ai/db": "workspace:*"
+    "@parametric-ai/db": "workspace:*",
+    "@parametric-ai/utils": "workspace:*"
   }
 }
