--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.39",
+    "@hookform/resolvers": "catalog:",
     "@parametric-ai/api": "workspace:*",
     "@parametric-ai/auth": "workspace:*",
     "@parametric-ai/ui": "workspace:*",
@@ -23,10 +24,12 @@
     "next-themes": "^0.4.6",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "react-hook-form": "catalog:",
     "shiki": "^3.12.2",
     "sonner": "catalog:",
     "streamdown": "^1.3.0",
-    "zod": "catalog:"
+    "zod": "catalog:",
+    "lucide-react": "catalog:"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "catalog:",
