--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "ultracite": "5.6.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "tsdown": "^0.15.5",
-    "@types/node": "^22.13.11"
+    "tsdown": "catalog:",
+    "@types/node": "catalog:"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
