--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,13 +5,18 @@
   "private": true,
   "scripts": {},
   "dependencies": {
+    "@radix-ui/react-label": "catalog:",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "catalog:",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
+    "next-themes": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "sonner": "catalog:",
     "tailwind-merge": "catalog:",
-    "tw-animate-css": "catalog:"
+    "tw-animate-css": "catalog:",
+    "lucide-react": "catalog:"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "catalog:",
