--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,7 +6,7 @@ catalog:
   '@ai-sdk/google': ^2.0.13
   '@hookform/resolvers': ^5.2.2
   '@prisma/client': ^6.15.0
-  '@radix-ui/react-label': ^2.1.7
+  '@radix-ui/react-label': 2.1.7
   '@radix-ui/react-slot': 1.2.3
   '@tailwindcss/postcss': ^4.1.10
   '@tanstack/react-query': ^5.85.5
@@ -26,7 +26,7 @@ catalog:
   react: 19.1.0
   react-dom: 19.1.0
   react-hook-form: ^7.65.0
-  sonner: ^2.0.5
+  sonner: 2.0.7
   tailwind-merge: ^3.3.1
   tailwindcss: ^4.1.10
   tsdown: ^0.15.5
@@ -38,6 +38,7 @@ onlyBuiltDependencies:
   - '@prisma/client'
   - '@prisma/engines'
   - '@tailwindcss/oxide'
+  - core-js-pure
   - esbuild
   - prisma
   - sharp
