--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -18,10 +18,10 @@ catalog:
   '@types/react-dom': ^19
   ai: ^5.0.49
   better-auth: ^1.3.13
-  class-variance-authority: ^0.7.1
+  class-variance-authority: 0.7.1
   clsx: ^2.1.1
   dotenv: ^17.2.2
-  lucide-react: ^0.475.0
+  lucide-react: 0.475.0
   next-themes: ^0.4.6
   react: 19.1.0
   react-dom: 19.1.0
