--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -5,6 +5,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "dist",
+    "jsx": "preserve",
     "composite": true,
     "paths": {
       "@parametric-ai/ui/*": ["./src/*"]
