--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,21 +2,26 @@
   "name": "@parametric-ai/utils",
   "type": "module",
   "exports": {
-    "./email": {
-      "types": "./dist/email/index.d.ts",
-      "default": "./src/email/index.ts"
+    "./auth/const": {
+      "types": "./dist/auth/const.d.ts",
+      "default": "./src/auth/const.ts"
+    },
+    "./email/helper": {
+      "types": "./dist/email/helper.d.ts",
+      "default": "./src/email/helper.ts"
     }
   },
   "scripts": {
     "build": "tsdown"
   },
   "devDependencies": {
-    "tsdown": "catalog:"
+    "tsdown": "catalog:",
+    "@types/nodemailer": "^7.0.2"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "resend": "^6.1.3"
+    "nodemailer": "^7.0.9"
   }
 }
