feat: add useDebounce hook for debouncing input values
chore: update tsconfig to include additional libraries

chore: update pnpm-lock.yaml to replace @ai-sdk/google with @ai-sdk/groq and add groq-sdk

chore: modify pnpm-workspace.yaml to reflect changes in package catalog

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,7 +25,8 @@
     "@trpc/client": "catalog:",
     "@prisma/client": "catalog:",
     "ai": "catalog:",
-    "@ai-sdk/google": "catalog:",
+    "@ai-sdk/groq": "catalog:",
+    "groq-sdk": "catalog:",
     "dotenv": "catalog:",
     "zod": "catalog:",
     "better-auth": "catalog:",
