--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,19 +3,20 @@ packages:
   - packages/*
 
 catalog:
-  '@ai-sdk/google': ^2.0.13
-  '@hookform/resolvers': ^5.2.2
-  '@prisma/client': ^6.15.0
-  '@radix-ui/react-label': 2.1.7
-  '@radix-ui/react-slot': 1.2.3
-  '@tailwindcss/postcss': ^4.1.10
-  '@tanstack/react-query': ^5.85.5
-  '@trpc/client': ^11.5.0
-  '@trpc/server': ^11.5.0
-  '@trpc/tanstack-react-query': ^11.5.0
-  '@types/node': ^22.13.11
-  '@types/react': ~19.2.2
-  '@types/react-dom': ^19
+  "@ai-sdk/groq": ^2.0.8
+  "groq-sdk": ^0.33.0
+  "@hookform/resolvers": ^5.2.2
+  "@prisma/client": ^6.15.0
+  "@radix-ui/react-label": 2.1.7
+  "@radix-ui/react-slot": 1.2.3
+  "@tailwindcss/postcss": ^4.1.10
+  "@tanstack/react-query": ^5.85.5
+  "@trpc/client": ^11.5.0
+  "@trpc/server": ^11.5.0
+  "@trpc/tanstack-react-query": ^11.5.0
+  "@types/node": ^22.13.11
+  "@types/react": ~19.2.2
+  "@types/react-dom": ^19
   ai: ^5.0.49
   better-auth: ^1.3.13
   class-variance-authority: 0.7.1
@@ -35,9 +36,9 @@ catalog:
   zod: ^4.1.11
 
 onlyBuiltDependencies:
-  - '@prisma/client'
-  - '@prisma/engines'
-  - '@tailwindcss/oxide'
+  - "@prisma/client"
+  - "@prisma/engines"
+  - "@tailwindcss/oxide"
   - core-js-pure
   - esbuild
   - prisma
