feat(api): implement error handling for Groq and Prisma errors feat(api): add Zod error handling utility fix(api): use environment variable for Groq API key chore: update package.json and pnpm workspace for http-status-codes catalog

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -30,6 +30,7 @@
     "dotenv": "catalog:",
     "zod": "catalog:",
     "better-auth": "catalog:",
+    "http-status-codes": "catalog:",
     "@parametric-ai/auth": "workspace:*",
     "@parametric-ai/db": "workspace:*"
   }
