--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,7 +21,7 @@
     "express": "^5.1.0",
     "express-async-error": "^0.0.2",
     "helmet": "^8.1.0",
-    "http-status-codes": "^2.3.0",
+    "http-status-codes": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
