--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -34,6 +34,7 @@ catalog:
   tw-animate-css: ^1.3.6
   typescript: ^5.8.2
   zod: ^4.1.11
+  http-status-codes: "^2.3.0"
 
 onlyBuiltDependencies:
   - "@prisma/client"
