feat: Implement Create Experiment Dialog and Form
- Refactored CreateExperimentDialog to utilize CreateExperimentForm for better separation of concerns.
- Added CreateExperimentForm component with form handling using react-hook-form.
- Integrated AI model fetching and experiment creation logic using TRPC and react-query.
- Introduced useCreateExperiment hook for managing experiment creation mutations.
- Defined constants for experiment tag limits and validation schema using Zod.
- Updated API routes and controllers to handle experiment-related queries and mutations.
- Removed deprecated AI model controller and router, replacing with new experiment logic.
- Added new utility functions and constants for experiment validation.
- Updated package dependencies to include necessary libraries for form handling and validation.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@parametric-ai/api": "workspace:*",
     "@parametric-ai/auth": "workspace:*",
     "@parametric-ai/ui": "workspace:*",
+    "@parametric-ai/utils": "workspace:*",
     "@prisma/client": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
