feat(ui): add Pagination component with loading state and pagination controls
feat(ui): implement Popover component with trigger and content

fix(ui): update setSearch type in SearchProps for better clarity

fix(hooks): increase debounce delay to 500ms for improved performance

feat(utils): add constants for experiment limits and query parameters

feat(utils): enhance experiment schema with query validation

chore(deps): update pnpm lockfile with new dependencies including date-fns, superjson, and zustand

chore(workspace): update pnpm workspace dependencies and remove unused groq-sdk

--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,12 @@
       "!**/.source"
     ]
   },
-  "extends": [
-    "ultracite"
-  ]
+  "extends": ["ultracite"],
+  "linter": {
+    "rules": {
+      "correctness": {
+        "noNestedComponentDefinitions": "off"
+      }
+    }
+  }
 }
