--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -33,6 +33,7 @@
     "http-status-codes": "catalog:",
     "@parametric-ai/auth": "workspace:*",
     "@parametric-ai/db": "workspace:*",
-    "@parametric-ai/utils": "workspace:*"
+    "@parametric-ai/utils": "workspace:*",
+    "superjson": "catalog:"
   }
 }
