--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@trpc/tanstack-react-query": "catalog:",
     "ai": "catalog:",
     "better-auth": "catalog:",
+    "lucide-react": "catalog:",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "catalog:",
@@ -30,7 +31,9 @@
     "sonner": "catalog:",
     "streamdown": "^1.3.0",
     "zod": "catalog:",
-    "lucide-react": "catalog:"
+    "superjson": "catalog:",
+    "date-fns": "catalog:",
+    "zustand": "catalog:"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "catalog:",
