--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,7 +4,6 @@ packages:
 
 catalog:
   "@ai-sdk/groq": ^2.0.8
-  "groq-sdk": ^0.33.0
   "@hookform/resolvers": ^5.2.2
   "@prisma/client": ^6.15.0
   "@radix-ui/react-label": 2.1.7
@@ -21,20 +20,24 @@ catalog:
   better-auth: ^1.3.13
   class-variance-authority: 0.7.1
   clsx: ^2.1.1
+  date-fns: ^4.1.0
   dotenv: ^17.2.2
+  groq-sdk: ^0.33.0
+  http-status-codes: ^2.3.0
   lucide-react: 0.475.0
   next-themes: ^0.4.6
   react: 19.1.0
   react-dom: 19.1.0
   react-hook-form: ^7.65.0
   sonner: 2.0.7
+  superjson: ^2.2.2
   tailwind-merge: ^3.3.1
   tailwindcss: ^4.1.10
   tsdown: ^0.15.5
   tw-animate-css: ^1.3.6
   typescript: ^5.8.2
   zod: ^4.1.11
-  http-status-codes: "^2.3.0"
+  zustand: ^5.0.8
 
 onlyBuiltDependencies:
   - "@prisma/client"
