feat: add MetricsStackedBarChart component for visualizing metrics in a stacked bar format
feat: create ResponseCharts component to display metrics charts

fix: update ResponseList to use section element for better semantics

feat: integrate ResponseCharts into Responses component for enhanced data visualization

fix: invalidate metrics query on response generation to ensure fresh data

feat: define MAX_VISIBLE_METRIC_BARS constant for controlling visible metrics in charts

chore: add recharts dependency to UI package for charting capabilities

feat: implement Chart components for reusable chart functionality

style: update global CSS for new chart colors

chore: update pnpm workspace to include recharts and related dependencies

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,7 +33,8 @@
     "zod": "catalog:",
     "superjson": "catalog:",
     "date-fns": "catalog:",
-    "zustand": "catalog:"
+    "zustand": "catalog:",
+    "recharts": "catalog:"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "catalog:",
