--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,19 +3,20 @@ packages:
   - packages/*
 
 catalog:
-  "@ai-sdk/groq": ^2.0.8
-  "@hookform/resolvers": ^5.2.2
-  "@prisma/client": ^6.15.0
-  "@radix-ui/react-label": 2.1.7
-  "@radix-ui/react-slot": 1.2.3
-  "@tailwindcss/postcss": ^4.1.10
-  "@tanstack/react-query": ^5.85.5
-  "@trpc/client": ^11.5.0
-  "@trpc/server": ^11.5.0
-  "@trpc/tanstack-react-query": ^11.5.0
-  "@types/node": ^22.13.11
-  "@types/react": ~19.2.2
-  "@types/react-dom": ^19
+  '@ai-sdk/groq': ^2.0.8
+  '@hookform/resolvers': ^5.2.2
+  '@prisma/client': ^6.15.0
+  '@radix-ui/react-label': 2.1.7
+  '@radix-ui/react-slot': 1.2.3
+  '@tailwindcss/postcss': ^4.1.10
+  '@tanstack/react-query': ^5.85.5
+  '@trpc/client': ^11.5.0
+  '@trpc/server': ^11.5.0
+  '@trpc/tanstack-react-query': ^11.5.0
+  '@types/node': ^22.13.11
+  '@types/react': ~19.2.2
+  '@types/react-dom': ^19
+  '@types/sentiment': ^5.0.4
   ai: ^5.0.49
   better-auth: ^1.3.13
   class-variance-authority: 0.7.1
@@ -25,10 +26,12 @@ catalog:
   groq-sdk: ^0.33.0
   http-status-codes: ^2.3.0
   lucide-react: 0.475.0
+  natural: ^8.1.0
   next-themes: ^0.4.6
   react: 19.1.0
   react-dom: 19.1.0
   react-hook-form: ^7.65.0
+  sentiment: ^5.0.2
   sonner: 2.0.7
   superjson: ^2.2.2
   tailwind-merge: ^3.3.1
@@ -38,14 +41,12 @@ catalog:
   typescript: ^5.8.2
   zod: ^4.1.11
   zustand: ^5.0.8
-  natural: "^8.1.0"
-  sentiment: "^5.0.2"
-  "@types/sentiment": "^5.0.4"
+  recharts: "2.15.4"
 
 onlyBuiltDependencies:
-  - "@prisma/client"
-  - "@prisma/engines"
-  - "@tailwindcss/oxide"
+  - '@prisma/client'
+  - '@prisma/engines'
+  - '@tailwindcss/oxide'
   - core-js-pure
   - esbuild
   - prisma
