feat: implement export functionality for experiments to Excel

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -34,6 +34,7 @@
     "@parametric-ai/auth": "workspace:*",
     "@parametric-ai/db": "workspace:*",
     "@parametric-ai/utils": "workspace:*",
-    "superjson": "catalog:"
+    "superjson": "catalog:",
+    "xlsx": "catalog:"
   }
 }
