--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -27,7 +27,6 @@
   },
   "dependencies": {
     "@prisma/client": "catalog:",
-    "dotenv": "catalog:",
-    "zod": "catalog:"
+    "dotenv": "catalog:"
   }
 }
