fix: update environment configuration with local URLs and database settings

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,5 +1,14 @@
 BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=
-CORS_ORIGIN=
-GOOGLE_GENERATIVE_AI_API_KEY=
-DATABASE_URL=
+BETTER_AUTH_URL=http://localhost:3000
+CORS_ORIGIN=http://localhost:3001
+GROQ_API_KEY=
+DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
+SENDGRID_API_KEY=
+SENDGRID_HOST=smtp.sendgrid.net
+SENDGRID_PORT=587
+SENDGRID_USER=apikey
+EMAIL_FROM_ID=
+EMAIL_FROM_NAME=Parametric AI
+PORT=3000
+APP_NAME=Parametric AI
+GROQ_API_BASE_URL=https://api.groq.com/openai/v1
