feat(auth): add credits and credit reset time to user model
- Updated the User model in Prisma schema to include optional fields for credits and creditResetTime.
- Modified the auth configuration to include additional user fields for credits with a default value.
- Removed session cookie max age configuration and disabled cookie caching.
- Introduced DEFAULT_CREDITS constant in auth constants.

style(ui): update global styles for improved design

- Changed color variables in globals.css for a more cohesive design.
- Updated font families and shadow properties for better aesthetics.
- Adjusted chart colors and sidebar styles for consistency.

fix(utils): add date-fns for time interval formatting

- Added date-fns as a dependency in utils package.
- Implemented getTimeInterval function to format time intervals using date-fns.

chore: update pnpm lockfile

- Updated pnpm-lock.yaml to reflect changes in dependencies and versions.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hookform/resolvers": "catalog:",
     "@parametric-ai/api": "workspace:*",
+    "@parametric-ai/auth": "workspace:*",
     "@parametric-ai/ui": "workspace:*",
     "@parametric-ai/utils": "workspace:*",
     "@tanstack/react-query": "catalog:",
